--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests
+requests==2.24.0
 bs4
-matplotlib==3.1.3
+matplotlib==3.3.2
 pydrive
 livestreamer
 opencv-python
@@ -9,3 +9,5 @@ pyautogui
 
 TikTokApi
 python-twitter
+
+svgwrite
