Load configs from file

--- a/tool/post_render/configs.json
+++ b/tool/post_render/configs.json
@@ -1,3 +1,20 @@
 {
-
+    "uniud": {
+        "operators": ["123"],
+        "images": {
+            "image_scale": [1, 1],
+            "colorize_logo": false,
+            "logo_position": "auto"
+        },
+        "text": {
+            "spot": {
+                "top_image": "quotation-marks",
+                "text_align": "center",
+                "line_position": null,
+                "colorize_logo": true,
+                "logo_position": "center",
+                "rectangle": true
+            }
+        }
+    }
 }
