--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /configs/
 /tool/twitter/config.cfg
 /other/secrets.json
+/credit_shield/secrets.json
 
 tool/credentials.json
 tool/credentials_all.json
