--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,34 @@
-requests==2.24.0
-bs4
 matplotlib==3.3.2
-pydrive
-livestreamer
-opencv-python
-selenium
-pyautogui
+pydrive~=1.3.1
 
+opencv-python~=4.4.0.44
+pyautogui~=0.9.52
+svgwrite
+numpy~=1.18.1
+pillow~=7.2.0
+pydantic==1.9.0
+
+# social
 TikTokApi
 python-twitter
-
-svgwrite
-numpy
-pillow
-
-instapy
-schedule
-
+instapy~=0.6.12
 discord_webhook
 
+# scraping
+requests==2.24.0
+bs4~=0.0.1
+sitemap-generator==0.9.8
+selenium~=3.141.0
+
+schedule~=0.6.0
+
 git+https://git@github.com/SpinPool/Chaturbate-API.git
+livestreamer~=1.12.2
+
+configparser~=5.0.1
+beautifulsoup4~=4.8.2
+
+AWSIoTPythonSDK
+
+fastapi==0.75.1
+uvicorn
